Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-4106

concurrency_test fails randomly

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • 0.10.0
    • 0.11.0
    • C++ - Library
    • None
    • MinGW (appveyor), travis CI

    Description

      While adding Appveyor build support for MinGW (THRIFT-4081), this test failed periodically. It would throw an exception in ThreadFactoryTest reapTest where it calls monitor.wait(1000). It is reproducible locally as well if you have msys2/mingw64 and can use the instructions in the msys2 readme in build/cmake. The test has been disabled in mingw appveyor builds for now (those builds are new...)

      Travis CI builds are also showing an occasional failure in the test.

      Need to root cause, fix, and re-enable in any CI builds where it was disabled.

      Attachments

        Issue Links

          Activity

            People

              jking3 James E. King III
              jking3 James E. King III
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: