THRIFT-4106: fix errors concurrency_test was identifying Client: C++

This closes #1343